# project-management

./: docker-compose.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: check.py
backend/app/core/: config.py
backend/app/models/: __init__.py  client.py  documents.py  project.py  task.py  team.py  user.py
